major changes for the mafft function